# slhungary-bot

./: .env.example  Cargo.toml  README.md
src/: config.rs  main.rs  utils.rs
src/commands/: join.rs  leave.rs  mod.rs  pause.rs  ping.rs  play.rs  resume.rs  skip.rs
src/events/: message.rs  mod.rs  ready.rs  voice_state_update.rs
