[package]
name = "slhungary-bot"
version = "0.1.0"
authors = ["jake <dominik8655@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["voice"] }
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = "0.5.4"
tokio = { version = "1.38.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
